# Embark

./: .gitignore  .importlinter  CNAME  Makefile  README.md  application.py  build-onedir.bat  build.bat  check-all.bat  check-pylint.bat  check-types.bat  hooks.py  index.html  inject.py  main.py  mypy.ini  playbook.yml  project_scripts.py  pyproject.toml  requirements.txt  ruff.toml  schools.html  setup.cfg  test-package.ps1
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  отчет-об-ошибке.md  отчет-об-ошибке.yml  предложение.yml
.github/workflows/: develop_test.yml  docs.yml  test.yml  test_and_build.yml
Writerside/: docs-ru.tree  docs.tree  redirection-rules.xml  v.list  writerside.cfg
Writerside/cfg/: buildprofiles.xml
Writerside/topics/: Builtin-tasks.topic  Command-line-usage.topic  Configuration-guide.topic  Contributing.md  Custom-tasks.topic  Execution-flow.topic  Home-ru.topic  Home.topic  Prebuilt-playbooks.md  Quickstart.topic  UI-mode-usage.md  UI-mode-usage.topic  std-cmd-ru.topic  std-cmd.topic  std-copy-ru.topic  std-copy.topic  std-download-ru.topic  std-download.topic  std-install-ru.topic  std-install.topic  Быстрый-старт.topic  Внесите-свой-вклад.md  Встроенные-задачи.topic  Готовые-плейбуки.md  Использование-в-терминале.topic  Использование-с-графическим-интерфейсом.md  Использование-с-графическим-интерфейсом.topic  Конфигурация.topic  Поток-выполнения.topic  Собственные-задачи.topic
commands/: cmd_dev_list_installs.py  cmd_dev_query_install.py  cmd_run.py
docs/: index.html
docs/en/: HelpTOC.json  Map.jhm  builtin-tasks.html  command-line-usage.html  config.json  configuration-guide.html  contributing.html  custom-tasks.html  execution-flow.html  home.html  prebuilt-playbooks.html  quickstart.html  starting-page-home.json  std-cmd.html  std-copy.html  std-download.html  std-install.html  ui-mode-usage.html
docs/ru/: HelpTOC.json  Map.jhm  config.json  home-ru.html  index.html  starting-page-home-ru.json  std-cmd-ru.html  std-copy-ru.html  std-download-ru.html  std-install-ru.html  быстрый-старт.html  внесите-свой-вклад.html  встроенные-задачи.html  готовые-плейбуки.html  использование-в-терминале.html  использование-с-графическим-интерфейсом.html  конфигурация.html  поток-выполнения.html  собственные-задачи.html
domain/: action.py  utils.py
domain/config/: config.py  exceptions.py  loader.py  models.py
domain/execution/: playbook.py
domain/tasks/: exception.py  (+1 more)
embark/: __main__.py  application.py  log_config.py  main.py  output.py  resources.py
impl/: context_factory.py  task_loader_repo.py
tests/: runner.py  server.py
user_select/: dialog.py
(+165 files in other folders)
