[tool.poetry]
name = "embark"
version = "0.4.1-beta"
description = "Embark playbook executor and development kit"
authors = ["Tapeline"]
license = "GNU GPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pydantic = "^2.9.2"
PyYAML = "^6.0.2"
wemake-python-styleguide = "^1.0.0"

[tool.poetry.dev-dependencies]
pylint = "^3.3.1"
mypy = "^1.11.2"
pyinstaller = "6.11.1"

[tool.poetry.scripts]
cleanbuild = "project_scripts:clean_build"
build = "project_scripts:build"
check = "project_scripts:check_all"
check_types = "project_scripts:check_mypy"
check_pylint = "project_scripts:check_pylint"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
