[tool.poetry]
name = "embark"
version = "0.10.0"
description = "Embark playbook executor and development kit"
authors = ["Tapeline"]
license = "GNU GPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pydantic = "^2.9.2"
PyYAML = "^6.0.2"
customtkinter = "^5.2.2"
requests = "^2.32.3"
pillow = "^11.1.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
mypy = "^1.11.2"
pyinstaller = "6.11.1"
wemake-python-styleguide = "^1.1.0"
ruff = "^0.9.1"
import-linter = "^2.1"
syrupy = "^4.8.1"
pytest-cov = "^6.0.0"
#types-PyYAML = "^6.0.12.20241230"
#types-requests = "^2.32.0.20241016"

[tool.poetry.scripts]
cleanbuild = "project_scripts:clean_build"
build = "project_scripts:build"
check = "project_scripts:check_all"
check_no_wps = "project_scripts:check_all_no_wps"
check_types = "project_scripts:check_mypy"
check_wps = "project_scripts:check_wps"
check_imports = "project_scripts:check_imports"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = ["customtkinter.*"]
ignore_missing_imports = true

[tool.mypy]
check_untyped_defs = true
